resources/style.css
/*==========  Header ==========*/
.header-containter {
  position: fixed;
  background-color: black;
  width: 100%;
  z-index: 6;
}
.header-div {
  align-items: center;
  display: flex;
  flex-direction: row;
  border-bottom: 1px solid seashell;
  height: 69px;
}
.header-div img {
  padding: 0px 0px 0px 10px;
  margin-right: auto;
  height: 50px;
}
.header-div span a {
  font-family: helvetica;
  font-size: 22px;
  color: seashell;
  background-color: black;
  opacity: 0.9;
  text-align: center;
  padding: 0px 15px;
}

/*========== Body ===========*/

body {
  margin-top: 0px;
  background-color: black;
  font-family: helvetica;
  font-size: 22px;
  color: seashell;
  background-color: black;
  opacity: 0.9;
  text-align: center;

}

/*========== OUR MISSION IMAGE ===========*/
.ourmission {
padding-top: 350px;
background-image: url("img/img-mission-background.jpg");
background-size: contain;
background-repeat: no-repeat;
height: 700px;
width: 1200px;
display: flex;
margin: auto;
align-items: center;
flex-direction: column;
}
.image-textcontainer {
  display: flex;
  align-items: center;
  flex-direction: column;
  background-color: black;
  width: 100%

}

.ourmission h2 {
  font-family: helvetica;
  color: seashell;
  opacity: 0.9;
  text-align: center;
  margin: 15px;
}

.ourmission h4 {
  background-color: black;
  font-family: helvetica;
  color: seashell;
  opacity: 0.9;
  text-align: center;
  margin: 15px;
}

/*========== Tea Of The Month ===========*/
.header-text {
  padding: 0;
  margin: 0;
}

.teaofthemonth-image-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  text-align: center;
  width: 1000px;
  height: auto;
  justify-content: space-between;
  margin: auto;

}
.image-row-1-c-1 {
background-image: url("img/img-mission-background.jpg");
background-size: cover;
background-repeat: no-repeat;
height: 200px;
width:  300px;
}
.image-row-1-c-2 {
background-image: url("img/img-spiced-rum.jpg");
background-size: cover;
background-repeat: no-repeat;
height: 200px;
width:  300px;
}
.image-row-1-c-3 {
background-image: url("img/img-donut.jpg");
background-size: cover;
background-repeat: no-repeat;
height: 200px;
width:  300px;
}

.image-text h4 {
  padding-top: 225px;
}

.teaimages {
  width: 300px;
  height: 200px;
}

